--- a/daci.html
+++ b/daci.html
@@ -60,7 +60,7 @@
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="products-копия.html">Дакимакуры</a>
+                <a class="nav-link" href="daci.html">Дакимакуры</a>
               </li>
 
             </ul>
