--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">О нас</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="daci.html">Дакимакуры</a>
+              </li>
              
             </ul>
           </div>
