--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>AniStore</title>
+    <title> аниме интернет магазин в санкт-петербурге </title>
 
     
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
