--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>AniStore</title>
-    <title>аниме интернет магазин в санкт-петербурге</title>
+    <title>Аниме интернет магазин в Санкт-Петербурге AniStore</title>
+    
 
     
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
