--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="yandex-verification" content="8d2cb6a27fc66211" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="AniStore - интернет магазин, предлагающий фанатам аниме и манги множество тематических товаров по вашим любимым тайтлам. ">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
