--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   </head>
 
   <body>
- <h1> Наиболее популярные аниме товары </h1>
+ <h1 class="
+   visually-hidden">
+    Важный
+    за головок,
+    которого нет
+</h1>
     
     <div id="preloader">
         <div class="jumper">
