--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   </head>
 
   <body>
- <h1 class="
-   visually-hidden">
+ <h1 class="visually-hidden">
     Важный
     за головок,
     которого нет
