--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="yandex-verification" content="8d2cb6a27fc66211" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="AniStore - интернет магазин, предлагающий фанатам аниме и манги множество тематических товаров по вашим любимым тайтлам. ">
+    <meta name="description" content="AniStore - аниме интернет магазин в Санкт Петербурге, предлагающий фанатам аниме и манги множество тематических товаров по вашим любимым тайтлам. ">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
@@ -37,7 +37,7 @@
         </div>
     </div>  
     
-</
+
 
    
     <header class="">
@@ -107,7 +107,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_01.jpg" alt="аниме интернет магазин в санкт петербурге"></a>
               <div class="down-content">
                 <a href="#"><h4>Плюшевая "Хакурей Рейму"</h4></a>
                 <h6>3000р</h6>
