--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="down-content">
                 <a href="#"><h4>Плюшевая "Хакурей Рейму"</h4></a>
                 <h6>3000р</h6>
-                <p>Плюшевая Рейму - ваш верный компаньон.</p>
+                <p>Плюшевая Рейму - ваш верный компаньон. Живете в Санкт Перебурге и являетесь большим фанатом знаменитого аниме с участием Рейму - тогда Вам определенно к нам. Приобретите эту потрясающую игрушку - и да улыбнется вам удача!</p>
                  <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -132,7 +132,7 @@
               <div class="down-content">
                 <a href="#"><h4>Плюшевая "Акаги"</h4></a>
                 <h6>3000р</h6>
-                <p>Плюшевая Акаги - ваш верный компаньон.</p>
+                <p>Плюшевая Акаги - ваш верный компаньон. Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда мягкая игрушка Акаги - ваш выбор!</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -150,7 +150,7 @@
               <div class="down-content">
                 <a href="#"><h4>Фигурка "Акаги"</h4></a>
                 <h6>2000р</h6>
-                <p>Украсьте комнату потрясающей пластиковой Акаги..</p>
+                <p>Украсьте комнату потрясающей пластиковой Акаги.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Акаги - ваш выбор</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
