--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <div class="down-content">
                 <a href="#"><h4>Фигурка "Акаги"</h4></a>
                 <h6>2000р</h6>
-                <p>Украсьте комнату потрясающей пластиковой Акаги.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Акаги - ваш выбор</p>
+                <p>Украсьте комнату потрясающей пластиковой Акаги.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Акаги - ваш выбор!</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
