--- a/404.html
+++ b/404.html
@@ -20,9 +20,9 @@ div {
 <a href=”#”><img src=”site.jpg”></a>
 
 <div>
-<p>This was a web page for an organization that used to exist. This organization no longer exists as it has been replaced with a new organization to teach surf kids the values and love of the ocean. The new site is: https://www.pleasurepointsurfclub.com/
+<p>Опанки, такой страницы не существует!
 <br><br> 
-If you came upon this page by mistake, try checking the URL in your web browser.</p>
+</p>
 </div>
 
 </body>
