--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ div {
 
 <body>
 
-<a href=”#”><img src=”site.jpg”></a>
+<a href=”#”><img src=”error.png”></a>
 
 <div>
 <p>Опанки, такой страницы не существует!
