--- a/404.html
+++ b/404.html
@@ -1,29 +1,5 @@
-<html>
-<head>
-
-<style type=text/css>
-p {
-    color: #0ecc8a;
-    font-weight: 900;
-    font-size: 20px;
-    font-family: Helvetica, Arial, sans-serif;    
-}
-
-div {
-  background-color: gray;
-}
-</style>
-</head>
-
-<body>
-
-<a href=”#”><img src=”error.png”></a>
-
-<div>
-<p>Опанки, такой страницы не существует!
-<br><br> 
-</p>
+<div id="main">
+    	<div class="fof">
+        		<h1>Error 404</h1>
+    	</div>
 </div>
-
-</body>
-</html>
