--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="down-content">
                 <a href="#"><h4>Плюшевая "Акаги"</h4></a>
                 <h6>3000р</h6>
-                <p>Плюшевая Акаги - ваш верный компаньон. Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда мягкая игрушка Акаги - ваш выбор!</p>
+                <p><a href="https://roman-un.github.io/products.html">Плюшевая</a>Акаги - ваш верный компаньон. Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда мягкая игрушка Акаги - ваш выбор!</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
