--- a/Akagi.html
+++ b/Akagi.html
@@ -1,53 +1,28 @@
-<html>
+<html lang="en">
+
+<head>
+  <title>Harvest vase</title>
+  <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
+</head>
 
 <body>
-  <main>
-    <div class="card">
-      <div class="card__title">
-        <div class="icon">
-          <a href="#"><i class="fa fa-arrow-left"></i></a>
-        </div>
-        <h3>New products</h3>
+  <div class="wrapper">
+    <div class="product-img">
+      <img src="assets/images/product_01.jpg">
+    </div>
+    <div class="product-info">
+      <div class="product-text">
+        <h1>Harvest Vase</h1>
+        <h2>by studio and friends</h2>
+        <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
       </div>
-      <div class="card__body">
-        <div class="half">
-          <div class="featured_text">
-            <h1>Nurton</h1>
-            <p class="sub">Office Chair</p>
-            <p class="price">$210.00</p>
-          </div>
-          <div class="image">
-            <img src="Akagi.jpg" alt="">
-          </div>
-        </div>
-        <div class="half">
-          <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem nam pariatur voluptate perferendis, asperiores aspernatur! Porro similique consequatur, nobis soluta minima, quasi laboriosam hic cupiditate perferendis esse numquam magni.</p>
-          </div>
-          <span class="stock"><i class="fa fa-pen"></i> In stock</span>
-          <div class="reviews">
-            <ul class="stars">
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star-o"></i></li>
-            </ul>
-            <span>(64 reviews)</span>
-          </div>
-        </div>
-      </div>
-      <div class="card__footer">
-        <div class="recommend">
-          <p>Recommended by</p>
-          <h3>Andrew Palmer</h3>
-        </div>
-        <div class="action">
-          <button type="button">Add to cart</button>
-        </div>
+      <div class="product-price-btn">
+        <p><span>78</span>$</p>
+        <button type="button">buy now</button>
       </div>
     </div>
-  </main>
+  </div>
+
 </body>
 
 </html>
