--- a/Akagi.html
+++ b/Akagi.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Harvest vase</title>
-  <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="SoClose.CSS">
 </head>
 
 <body>
