--- a/404.html
+++ b/404.html
@@ -1,5 +1,22 @@
-<div id="main">
-    	<div class="fof">
-        		<h1>Error 404</h1>
-    	</div>
-</div>
+!DOCTYPE html>
+<html>
+<head>
+<style type=text/css>
+
+p {    color: blue;    
+font-weight: 900;    
+font-size: 20px;    
+font-family: Helvetica, Arial, sans-serif;    
+}
+
+</style>
+</head>
+
+<body>
+
+<p> Опаньки, а здесь ничего нет! Возможно, страница временно недоступна или вовсе не существует.
+<br><br> 
+Проверьте запрашиваемый адрес.</p>
+
+</body>
+</html>
