--- a/shorelinesurfteam.html
+++ b/shorelinesurfteam.html
@@ -13,7 +13,7 @@ font-family: Helvetica, Arial, sans-serif;
 </head>
 
 <body>
-
+<a href=”#”><img src=”123.png”></a>
 <p> Опаньки, а здесь ничего нет! Возможно, страница временно недоступна или вовсе не существует.
 <br><br> 
 Проверьте запрашиваемый адрес.</p>
