--- a/404.html
+++ b/404.html
@@ -6,27 +6,27 @@
 html { height: 100%; }
 body {
   background: url(gekkan-shoujo-nozaki-kun-sakura-chiyo-anime-female-wallpaper.jpg) no-repeat;
-  background-size: cover; /* Масштабирует картинку сохраняя пропорции */
+  background-size: cover; 
   }
 .over {
-  background: rgba(0, 0, 0, 0.7); /* Цвет фона и значение прозрачности */
-  position: absolute; /* Абсолютное позиционирование */
-  left: 0; right: 0; top: 0; bottom: 0; /* Отступы от краев браузера */
+  background: rgba(0, 0, 0, 0.7); 
+  position: absolute; /
+  left: 0; right: 0; top: 0; bottom: 0; /
   }
 .404 {
   margin-top: 100px;
-  text-align: center; /* Выравнивание текста по центру */
+  text-align: center; 
   font-size: 10em;
   color: #fcf9f9;
-  position: relative; /* Относительное позиционирование */
-  z-index: 2; /* Порядок наложения элемента по высоте */
+  position: relative; 
+  z-index: 2; 
   }
 .notfound {
   text-align: center;
   color: #fff;
   font-size: 2em;
-  position: relative; /* Относительное позиционирование */
-  z-index: 2; /* Порядок наложения элемента по слоям в глубину */
+  position: relative; 
+  z-index: 2; 
   }
 .notfound a {
   color: #fff;
@@ -41,7 +41,7 @@ body {
 <body>
 <div class="over"></div>
 <div class="404">404</div>
-<div class="notfound">страница не найдена<br>
+<div class="notfound">Страница не найдена<br>
 <a href="#"> перейти на главную страницу..</a>
 </div>
 </body>
