--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@ body {
   position: absolute; /
   left: 0; right: 0; top: 0; bottom: 0; /
   }
-.404 {
+.error {
   text-align: center; 
   font-size: 10em;
   color: #fcf9f9;
@@ -39,9 +39,9 @@ body {
 </head>
 <body>
 <div class="over"></div>
-<div class="404">404</div>
+<div class="error">404</div>
 <div class="notfound">Страница не найдена<br>
-<a href="#"> перейти на главную страницу..</a>
+<a href="#"> Перейти на главную страницу..</a>
 </div>
 </body>
 </html>
