--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@ body {
 <div class="over"></div>
 <div class="error">404</div>
 <div class="notfound">Страница не найдена<br>
-<a href="#"> Перейти на главную страницу..</a>
+<a href="#"> Перейти на главную страницу...</a>
 </div>
 </body>
 </html>
