--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ body {
 .error {
   text-align: center; 
   font-size: 10em;
-  color: #fcf9f9;
+  color: #000000;
   position: relative; 
   z-index: 2; 
   }
