--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Аниме интернет магазин в Санкт-Петербурге. Купить аниме товары в AniStore.</title>
    
 
-    
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
