--- a/products.html
+++ b/products.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="description" content="AniStore - аниме интернет магазин в Санкт Петербурге, предлагающий фанатам аниме и манги приобрести множество аниме игрушек, аниме игрушки, игрушки аниме купить игрушки аниме фигурки мягкие игрушки аниме. ">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>AniStore</title>
+    <title><title>Аниме интернет магазин в Санкт-Петербурге. Купить мягкие аниме игрушки в AniStore.</title>title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -99,7 +100,7 @@
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/product_01.jpg" alt="аниме интернет магазин в санкт петербурге, купить"></a>
                         <div class="down-content">
                           <a href="#"><h4>Плюшевая "Хакурей Рейму"</h4></a>
                           <h6>3000р</h6>
