--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="yandex-verification" content="8d2cb6a27fc66211" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="AniStore - аниме интернет магазин в Санкт Петербурге, предлагающий фанатам аниме и манги купить множество тематических товаров по их любимым тайтлам. Доброго вечера, Олег. Олег, как Вы знаете, мы - команда профессионалов, и потому наняли корпоративного психолога. Он, Олег, тоже большой профессионал своего дела, и даже имел обширную полуторамесячную практику с людьми, которые не остались неудовлетворёнными после его сеансов.Вы спросите, какое это имеет отношение к Вам, Олег? Да самое прямое! Дело в том, что, как сообщил нам наш корпоративный профессиональный психолог, то, что достается бесплатно (или слишком дёшево), а также без дополнительных усилий, ресурсов, нервов и длительного ожидания в предвкушении, человеком не ценится, Олег. Потому - для Вашего же благополучия и конечного удовлетворения - мы откладываем сдачу проекта на неопределенный срок. А как Вы хотели, Олег? Психология - это наука, с ней не поспоришь! Вот и Вам советуем не спорить, а довериться команде профессионалов. Ожидайте, Олег, мы обязательно с вами свяжемся, когда проект будет готов.Кстати, чтобы так не нервничать лишний раз из-за какого-то проекта, рекомендуем и Вам проработаться у психолога. Можем даже поделиться контактами ;)Всего вам доброго, Олег, и храни Вас Господь!P.S. Как Вы понимаете, Олег, содержание корпоративного психолога тоже стоит денег. Так что ждём от Вас следующий аванс, Олег. Реквизиты те же. Олег, проект пока не начинал. Не могу войти в состояние потока, сейчас не в ресурсе, и всё тут. Вы поймите, много незакрытых гештальтов, и я, конечно, Вселенной посылаю запросы, жду инсайта, но пока глухо. Скоро буду проходить марафон продуктивности, получу от тренера персональную карту желаний, потом на психологические расстановки схожу, а там, глядишь, и из зоны комфорта смогу выйти. Вы не подумайте, что я без дела сижу: визуализировать свои цели тоже труд, это какая концентрация нужна... Такие дела, Олег. Я временно буду игнорить вас, чтобы не выгореть из-за токсичных вайбов. Я стараюсь полюбить себя и взять ответственность за свою жизнь, а вы нарушаете мои личные границы, Олег. Впредь готов отвечать лишь на экологично поданные запросы от вас. ">
+    <meta name="description" content="AniStore - аниме интернет магазин в Санкт Петербурге, предлагающий фанатам аниме и манги купить множество тематических товаров по их любимым тайтлам. Доброго вечера, Олег. Олег, как Вы знаете, мы - команда профессионалов, и потому наняли корпоративного психолога. Он, Олег, тоже большой профессионал своего дела, и даже имел обширную полуторамесячную практику с людьми, которые не остались неудовлетворёнными после его сеансов.Вы спросите, какое это имеет отношение к Вам, Олег? Да самое прямое! Дело в том, что, как сообщил нам наш корпоративный профессиональный психолог, то, что достается бесплатно (или слишком дёшево), а также без дополнительных усилий, ресурсов, нервов и длительного ожидания в предвкушении, человеком не ценится, Олег. Потому - для Вашего же благополучия и конечного удовлетворения - мы откладываем сдачу проекта на неопределенный срок. А как Вы хотели, Олег? Психология - это наука, с ней не поспоришь! Вот и Вам советуем не спорить, а довериться команде профессионалов. Ожидайте, Олег, мы обязательно с вами свяжемся, когда проект будет готов.Кстати, чтобы так не нервничать лишний раз из-за какого-то проекта, рекомендуем и Вам проработаться у психолога. Можем даже поделиться контактами ;)Всего вам доброго, Олег, и храни Вас Господь!P.S. Как Вы понимаете, Олег, содержание корпоративного психолога тоже стоит денег. Так что ждём от Вас следующий аванс, Олег. Реквизиты те же. Олег, проект пока не начинал. Не могу войти в состояние потока, сейчас не в ресурсе, и всё тут. Вы поймите, много незакрытых гештальтов, и я, конечно, Вселенной посылаю запросы, жду инсайта, но пока глухо. Скоро буду проходить марафон продуктивности, получу от тренера персональную карту желаний, потом на психологические расстановки схожу, а там, глядишь, и из зоны комфорта смогу выйти. Вы не подумайте, что я без дела сижу: визуализировать свои цели тоже труд, это какая концентрация нужна... Такие дела, Олег. Я временно буду игнорить вас, чтобы не выгореть из-за токсичных вайбов. Я стараюсь полюбить себя и взять ответственность за свою жизнь, а вы нарушаете мои личные границы, Олег. Впредь готов отвечать лишь на экологично поданные запросы от вас. аниме магазин в питере. аниме магазин рядом со мной. ">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Аниме интернет магазин в Санкт-Петербурге. Купить аниме товары в AniStore.</title>
+    <title>Аниме интернет магазин в Санкт-Петербурге. Купить аниме товары в AniStore. Аниме магазин в питере. аниме магазин рядом со мной </title>
    
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -29,7 +29,7 @@
   <body>
      
  <h1 class="visually-hidden">
-    аниме интернет магазин в санкт петербурге. Купить. 
+    аниме интернет магазин в санкт петербурге. Купить. аниме магазин в питере. аниме магазин рядом со мной 
 </h1>
     
     <div id="preloader">
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_01.jpg" alt="аниме интернет магазин в санкт петербурге, купить"></a>
+              <a href="#"><img src="assets/images/product_01.jpg" alt="аниме интернет магазин в санкт петербурге, купить. аниме магазин в питере. аниме магазин рядом со мной "></a>
               <div class="down-content">
                 <a href="#"><h4>Плюшевая "Хакурей Рейму"</h4></a>
                 <h6>3000р</h6>
