--- a/products.html
+++ b/products.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="description" content="аниме игрушки. игрушки аниме купить игрушки аниме фигурки мягкие игрушки аниме плюшевые игрушки аниме ">
+    <meta name="description" content="аниме игрушки мягкие игрушки аниме плюшевые игрушки аниме ">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>аниме игрушки. игрушки аниме купить игрушки аниме фигурки мягкие игрушки аниме плюшевые игрушки аниме.</title>
+    <title>аниме игрушки мягкие игрушки аниме плюшевые игрушки аниме.</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -28,7 +28,7 @@
 
   <body>
  <h1 class="visually-hidden">
-     аниме игрушки игрушки аниме купить игрушки аниме фигурки мягкие игрушки аниме плюшевые игрушки аниме.
+     аниме игрушки мягкие игрушки аниме плюшевые игрушки аниме.
 </h1>
     
     <div id="preloader">
@@ -102,7 +102,7 @@
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_01.jpg" alt="аниме игрушки. игрушки аниме купить игрушки аниме фигурки мягкие игрушки аниме плюшевые игрушки аниме."></a>
+                        <a href="#"><img src="assets/images/product_01.jpg" alt="аниме игрушки мягкие игрушки аниме плюшевые игрушки аниме."></a>
                         <div class="down-content">
                           <a href="#"><h4>Плюшевая "Хакурей Рейму"</h4></a>
                           <h6>3000р</h6>
