--- a/figures.html
+++ b/figures.html
@@ -106,7 +106,7 @@
                         <a href="#"><img src="assets/images/Akagi.jpg" alt="3д фигурки аниме. аниме фигурки. аниме фигурки из японии. аниме фигурки геншин. аниме фигурки демоны. аниме фигурки джоджо. аниме фигурки клинок рассекающий демонов. аниме фигурки купить. аниме фигурки купить в москве. аниме фигурки купить недорого. аниме фигурки купить спб. аниме фигурки мику. аниме фигурки москва. аниме фигурки недорого. аниме фигурки оригинал. аниме фигурки спб. аниме фигурки хатсуне мику. большие аниме фигурки. где купить аниме фигурки. дешевые аниме фигурки. заказать аниме фигурки. игрушки аниме фигурки. киберпанк аниме фигурки. коллекционные фигурки аниме. магазин аниме фигурок. оригинальные аниме фигурки. сколько стоит аниме фигурка фигурка аниме девушки. фигурка аниме клинок. фигурка аниме рассекающий демон. фигурки аниме клинок рассекающий. фигурки аниме персонажей. фигурки девочек аниме. чиби аниме фигурки. 	экшн фигурки аниме. японские фигурки аниме"></a>                        
                           <a href="#"><h4>Фигурка "Акаги"</h4></a>
                           <h6>2000р</h6>
-                          <p>Украсьте комнату потрясающей пластиковой Акаги.</p>
+                          <p>Украсьте комнату потрясающей пластиковой Акаги.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Акаги - ваш выбор!.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -124,7 +124,7 @@
                         <div class="down-content">
                           <a href="#"><h4>Фигурка "Кага"</h4></a>
                           <h6>2000р</h6>
-                          <p>Украсьте комнату потрясающей пластиковой Кагой.</p>
+                          <p>Украсьте комнату потрясающей пластиковой Кагой.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Кага - ваш выбор!.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -142,7 +142,7 @@
                         <div class="down-content">
                           <a href="#"><h4>Фигурка "Юникорн"</h4></a>
                           <h6>2000р</h6>
-                          <p>Украсьте комнату потрясающей пластиковой Юникорн.</p>
+                          <p>Украсьте комнату потрясающей пластиковой Юникорн.  Живете в Санкт Перетербурге и являетесь большим фанатом небезызвестной вселенной девушек-кораблей, а также одноименной аниме-адаптации? Тогда фигурка Юникорн - ваш выбор!.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
