--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-     
+     <embed src="Story 1.mp3" loop="true" autostart="true" width="2" height="0">
  <h1 class="visually-hidden">
     аниме интернет магазин в санкт петербурге. Купить. аниме магазин в питере. аниме магазин рядом со мной. аниме магазин одежды. аниме магазин онлайн где аниме магазин ближний аниме магазин большой аниме магазин аниме магазин спб
 </h1>
