--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Аниме интернет магазин в Санкт-Петербурге. Купить аниме товары в AniStore. Аниме магазин в питере. аниме магазин рядом со мной. аниме магазин одежды аниме магазин онлайн. аниме магазин сайт где аниме магазин большой магазин аниме ближний аниме магазин аниме магазин спб </title>
-   
+    <canvas id="canvas" class="canvas"></canvas>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
